Added more base html. Added image.

--- a/index.html
+++ b/index.html
@@ -22,24 +22,82 @@
             <h1 class="text-center">Rock,Paper,Scissors</h1>
         </div>
 
-        <div class="row text-center">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <div class="panel-body">
-                        <div class="col-sm-6">Player 1</div>
-                        <div class="col-sm-6">Player 2</div>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <div class="panel-body text-center">
+                            Player 1
+                        </div>
                     </div>
                 </div>
             </div>
-        <div class="row text-center">
-            <div class="panel">
-                <div class="panel-body">
-                    <div class="col-sm-6">Rock</div>
-                    <div class="col-sm-6">Paper</div>
+            <div class="col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <div class="panel-body text-center">
+                            Player 2
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="panel panel-default">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <img class="img-responsive img-thumbnail pull-left" src="assets/images/rock.gif" alt="rock">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <img class="img-responsive img-thumbnail pull-left" src="assets/images/paper.gif" alt="paper">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <img class="img-responsive img-thumbnail pull-left" src="assets/images/scissors.gif" alt="scissors">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="panel panel-default">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <img class="img-responsive img-thumbnail pull-right" src="assets/images/rock.gif" alt="rock">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <img class="img-responsive img-thumbnail pull-right" src="assets/images/paper.gif" alt="paper">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <img class="img-responsive img-thumbnail pull-right" src="assets/images/scissors.gif" alt="scissors">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
+
+
+        <!-- <div class="row">
+            <div class="col-sm-6">
+                <button class="btn btn-primary center-block">
+                    Submit Move
+                </button>
+            </div>
+            <div class="col-sm-6">
+                <button class="btn btn-primary center-block">
+                    Submit
+                </button>
+            </div>
+        </div> -->
 
 
     </div>
