Added presence tracker

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
             <h1 class="text-center">Rock,Paper,Scissors</h1>
         </div>
 
+        <form class="form-inline text-center">
+            <div class="form-group mx-sm-3 mb-2">
+              <label for="inputPassword2" class="sr-only">Player Name</label>
+              <input type="password" class="form-control" placeholder="Player">
+            </div>
+            <button type="submit" class="btn btn-primary mb-2">Submit Name</button>
+          </form>
+
         <div class="row">
             <div class="col-sm-6">
                 <div class="panel panel-default">
@@ -48,17 +56,17 @@
                 <div class="panel panel-default">
                     <div class="row">
                         <div class="col-sm-12">
-                            <img class="img-responsive img-thumbnail pull-left" src="assets/images/rock.gif" alt="rock">
+                            <img class="img-responsive img-thumbnail pull-left rock_p1" src="assets/images/rock.gif" alt="rock">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <img class="img-responsive img-thumbnail pull-left" src="assets/images/paper.gif" alt="paper">
+                            <img class="img-responsive img-thumbnail pull-left paper_p1" src="assets/images/paper.gif" alt="paper">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <img class="img-responsive img-thumbnail pull-left" src="assets/images/scissors.gif" alt="scissors">
+                            <img class="img-responsive img-thumbnail pull-left scissors_p1" src="assets/images/scissors.gif" alt="scissors">
                         </div>
                     </div>
                 </div>
@@ -67,17 +75,17 @@
                 <div class="panel panel-default">
                     <div class="row">
                         <div class="col-sm-12">
-                            <img class="img-responsive img-thumbnail pull-right" src="assets/images/rock.gif" alt="rock">
+                            <img class="img-responsive img-thumbnail pull-right rock_p2" src="assets/images/rock.gif" alt="rock">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <img class="img-responsive img-thumbnail pull-right" src="assets/images/paper.gif" alt="paper">
+                            <img class="img-responsive img-thumbnail pull-right paper_p2" src="assets/images/paper.gif" alt="paper">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <img class="img-responsive img-thumbnail pull-right" src="assets/images/scissors.gif" alt="scissors">
+                            <img class="img-responsive img-thumbnail pull-right scissors_p2" src="assets/images/scissors.gif" alt="scissors">
                         </div>
                     </div>
                 </div>
@@ -101,6 +109,6 @@
 
 
     </div>
-    
+    <script src="assets/javascript/app.js"></script>
 </body>
 </html>
