--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="assets/css/style.css">
+
     <!-- Firebase Reference -->
     <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase.js"></script>
 </head>
@@ -46,8 +49,16 @@
                             <h1>Player 1</h1>
                         </div>
                     </div>
+                    <div class="panel-body">
+                        <div class="score score1"></div>
+                        <div class="row">
+                            <div class="col-sm-12 choices1 text-center">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <div class="results"></div>
             <div class="col-sm-6">
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -55,65 +66,17 @@
                             <h1>Player 2</h1>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="panel panel-default">
-                    <div class="row choices1">
-                        <!-- <div class="col-sm-12">
-                            <img class="img-responsive img-thumbnail pull-left rock_p1" data-choice="rock" src="assets/images/rock.gif" alt="rock">
+                    <div class="panel-body">
+                        <div class="score score2"></div>
+                        <div class="row">
+                            <div class="col-sm-12 choices2 text-center">
+                            </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <img class="img-responsive img-thumbnail pull-left paper_p1" data-choice="paper" src="assets/images/paper.gif" alt="paper">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <img class="img-responsive img-thumbnail pull-left scissors_p1" data-choice="scissors" src="assets/images/scissors.gif" alt="scissors">
-                        </div> -->
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="panel panel-default">
-                    <div class="row choices2">
-                        <!-- <div class="col-sm-12">
-                            <img class="img-responsive img-thumbnail pull-right rock_p2" data-choice="rock" src="assets/images/rock.gif" alt="rock">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <img class="img-responsive img-thumbnail pull-right paper_p2" data-choice="paper" src="assets/images/paper.gif" alt="paper">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <img class="img-responsive img-thumbnail pull-right scissors_p2" data-choice="scissors" src="assets/images/scissors.gif" alt="scissors">
-                        </div> -->
                     </div>
                 </div>
             </div>
         </div>
 
-
-
-        <!-- <div class="row">
-            <div class="col-sm-6">
-                <button class="btn btn-primary center-block">
-                    Submit Move
-                </button>
-            </div>
-            <div class="col-sm-6">
-                <button class="btn btn-primary center-block">
-                    Submit
-                </button>
-            </div>
-        </div> -->
 
 
     </div>
