--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="panel panel-default text-center">
                     <div class="panel-heading">
                         <div class="panel-title name-panel">
-                            Your Team Name
+                            <span class='d-print-inline'>Your Team Name</span>
                             <div class='pull-right' id="watchers"></div>
                             <div class='pull-right'>&nbsp</div>
                             <img class='pull-right' src='assets/images/viewers.gif'>
@@ -66,6 +66,23 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="panel panel-default message_board">
+                    <div class="panel-heading message_heading">
+                        Messages
+                    </div>
+                    <div class="panel-body message_body">
+                    </div>
+                </div>
+                <form>
+                    <input type="text" class="form-control message_input">
+                    <br>    
+                    <button class="form-control btn btn-primary message_submit" type="submit">Submit</button>
+                </form>
             </div>
         </div>
 
